# reversedraft

./: .gitignore  README.md  db.sqlite3  main.py  pyproject.toml  requirements.txt
auction/: models.py  serializers.py  url.py  views.py
fifa_data/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
fifa_data/migrations/: 0001_initial.py
src/: settings.py  urls.py
src/api/: sofifa.py
src/polls/: apps.py  models.py
src/polls/migrations/: 0001_initial.py
